--- a/server/package.json
+++ b/server/package.json
@@ -23,6 +23,7 @@
         "dotenv": "^16.3.1",
         "express": "^4.18.2",
         "express-validator": "^7.0.1",
+        "google-auth-library": "^10.5.0",
         "jsonwebtoken": "^9.0.3",
         "mongoose": "^8.0.0"
     },
